syntax = "proto3";

package cryptor;

message Request {

	message ScryptArgs {
		bytes passwd = 1;
		bytes salt = 2;
		uint32 logN = 3;
		uint32 r = 4;
		uint32 p = 5;
		uint32 dkLen = 6;
	}
	
	uint32 func = 1;
	repeated BytesVal byte_args = 2;
	ScryptArgs scrypt_args = 3;

}

message BytesVal {
	bytes val = 1;
}

message Reply {

	message Error {
		string condition = 1;
		string message = 2;
	}

	BytesVal res = 1;
	BytesVal interim = 2;
	Error err = 3;
}

message BoolVal {
	bool val = 1;
}

message Keypair {
	bytes skey = 1;
	bytes pkey = 2;
}
